--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@ body {
 
 li {
   list-style-type: none;
-  width: 50px;
+  width: 80px;
+  margin-top: 1px;
   padding: 10px;
   margin-left: auto;
   margin-right: auto;
@@ -19,8 +20,13 @@ li {
 
 .game {
   margin: 60px 0 0 60px;
+  width: 600px;
+  height: 300px;
+  padding: 10px;
   display: flex;
   flex-direction: row;
+  border-radius: 15px;
+  border: 3px solid green
 }
 
 .game-info {
@@ -28,7 +34,15 @@ li {
   padding-right: 30px;
 }
 
-.game-stape {
+.info{
+  margin-top: 10px;
+  text-align: center;
+  width: auto;
+  border-radius: 10px;
+  border: 3px solid green
+}
+
+.game-staps {
   padding: 10px;
 }
 
@@ -62,9 +76,11 @@ li {
   border: 3px solid green;
 }
 
+
 .winner {
   text-align: center;
   font-size: 25px;
+  margin-top: 60px;
 }
 
 .game-refresh {
@@ -82,6 +98,7 @@ li {
   box-shadow: 0 0 40px 40px #a61b1b inset, 0 0 0 0 #808080;
   transition: 150ms ease-in-out;
 }
+
 .game-refresh:hover {
   box-shadow: 0 0 10px 0 green inset, 0 0 10px 4px green;
   color: green;
